# secagent

./: .gitignore  README.md  README2.md  SECAGENT_DELIVERY.md  pyproject.toml  requirements.txt  secagent.py
.github/workflows/: ci.yml  secret-scan.yml
config/: llm.yaml
scripts/: check_sensitive_config.py
secagent/: __init__.py
secagent.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
secagent/cli/: interactive.py  main.py
secagent/core/: __init__.py  task.py  workflow.py
secagent/findings/: __init__.py  model.py
secagent/llm/: cache.py  client.py  config.py  model_fetcher.py  system_prompt.py  thinking.py
secagent/mcp/: client.py  manager.py  server.py
secagent/security/: policy.py  risk_levels.py  safety_manager.py
secagent/skills/: __init__.py  registry.py  task_parser.py
secagent/tools/: __init__.py  builtin.py  loop.py  registry.py
tests/: test_core_workflow.py  test_llm.py  test_mcp.py  test_security.py
