[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "secagent"
version = "0.1.0"
description = "Security Research Agent - CLI based security research agent"
authors = [
    { name = "SecAgent Team", email = "secagent@example.com" }
]
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.31.0",
    "pyyaml>=6.0.1",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
secagent = "secagent.cli.main:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.setuptools.package-data]
"secagent.skills" = ["**/*.md"]
